--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -44,6 +44,7 @@ dependencies:
   shared_preferences: ^2.2.2
   flutter_multi_formatter: ^2.13.10
   fl_chart: ^1.1.1
+  youtube_player_flutter: ^9.1.3
 
 
 dev_dependencies:
